# rust-test-cicd2

./: .editorconfig  .env  .gitignore  CHANGELOG.md  Cargo.toml  TODO.md
.github/workflows/: build.yml
src/: CHANGELOG.md  lib.rs  main.rs
tests/: replace_string_in_file.rs
tests/examples/: test1.txt
