[package]
name = "rust-string-replacer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
glob = "0.3.1"

[dev-dependencies]
serial_test = "*"
# serial_test_derive = "*"

[profile.release]
# opt-level = 'z'     # Optimize for size
lto = true            # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
strip = true          # Strip symbols from binary* (or strip = "debuginfo")
